--- a/ko/World.po
+++ b/ko/World.po
@@ -3972,7 +3972,7 @@ msgid ""
 "road, the grandchildren of the current Tiger Lords may want to retaliate "
 "against us for their grandfathers!"
 msgstr ""
-"호랑이 군주들은 아르막이 저지른 짓에 복수하고 싶었지만 그럴 수 없었어요. 우리가 그 은퇴한 추장과 그 지지자들을 보호해 주었거든요. "
+"호랑이 군주는 아르막이 저지른 짓에 복수하고 싶었지만 그럴 수 없었어요. 우리가 그 은퇴한 추장과 그 지지자들을 보호해 주었거든요. "
 "누메리아의 야만인들은 이게 별로 마음에 들지 않았지만, {d|c41 Chief Armag}아르막이{/d} 무서워 공격을 하지는 "
 "않았답니다. 이 폭탄의 심지는 길지만, 확실히 타들어가고 있어요. 세월이 흘러 세대가 바뀌면 호랑이 군주의 자손들이 할아버지의 복수를 "
 "외칠까 걱정이에요!"
@@ -5175,7 +5175,7 @@ msgid ""
 "began healing, little by little. She still keeps her distance from people, "
 "but she's always glad to see the {mf|king|queen}."
 msgstr ""
-"나이리사의 저주가 걷히자, 살아 남은 얼굴잃은 자매의 망가졌던 얼굴이 아주 조금씩 회복되기 시작했어요. 그녀는 여전히 다른 사람들과 "
+"나이리사의 저주가 걷히자, 살아 남은 얼굴 잃은 자매의 망가졌던 얼굴이 아주 조금씩 회복되기 시작했어요. 그녀는 여전히 다른 사람들과 "
 "거리를 두면서도, {mf|왕|여왕}을 만나는 것만은 항상 반가워하고 있답니다."
 
 #. Mechanics/Blueprints/World/Epilogues/Cue_0304_Text
@@ -5192,7 +5192,7 @@ msgid ""
 "for long — after all, she was much better at crushing skulls than giving "
 "orders!"
 msgstr ""
-"아미리는 호랑이 부족에서 위대한 영웅으로 존경받았지만 오랫동안 족장으로 남아 있지는 않았어요다. 모두가 알고 있듯이, 아미리는 명령을 "
+"아미리는 호랑이 군주에서 위대한 영웅으로 존경받았지만 오랫동안 족장으로 남아 있지는 않았어요. 모두가 알고 있듯이, 아미리는 명령을 "
 "내리는 것보다 머리통을 부수는 걸 훨씬 잘했으니까요!"
 
 #. Mechanics/Blueprints/World/Epilogues/Cue_0307_Text
