어색한 표현, 맞춤법 수정

--- a/ko/Quests.po
+++ b/ko/Quests.po
@@ -7733,8 +7733,8 @@ msgid ""
 "from that mysterious ghost... Because if we don't, I'll just die of "
 "curiosity!"
 msgstr ""
-"마침내 아미리가 왜 과거에 대해 얘기하는 걸 싫어하는지 알게 되었습니다. 아미리와 같은 부족의남자 부족원들이 그녀를 죽이려고 했고 - "
-"도리어 그녀의 손에 목숨을 잃었습니다. 하지만 부족을 괴롭히는 유령과 아미리는 무슨 연결점이 있는 걸까요? 그리고 유령은 왜 아미리를 "
+"마침내 아미리가 왜 과거에 대해 얘기하는 걸 싫어하는지 알게 되었습니다. 아미리와 같은 부족원들이 그녀를 죽이려고 했고 – "
+"오히려 그녀의 손에 목숨을 잃었습니다. 하지만 부족을 괴롭히는 유령과 아미리는 무슨 연관성이 있는 걸까요? 그리고 유령은 왜 아미리를 "
 "\"도둑\"이라 부르는 걸까요? 도대체 그녀에게 뭘 원하는거죠? 당분간 이 의문들은 미해결 상태로 남겨 놓아야 할 것 같습니다: 실패한("
 "사실대로 말하자면 재앙에 가까웠던) 재상봉 이후에, 여섯 곰 부족은 누메리아로 돌아갔습니다. 하지만 분명 부족과 의문에 쌓인 유령에 관한 "
 "소식을 다시금 듣게 되겠지요.... 그렇지 않다면, 궁금해서 미쳐버릴꺼에요!"
