어색한 표현 및 오타 수정

--- a/ko/Root.po
+++ b/ko/Root.po
@@ -7023,9 +7023,9 @@ msgid ""
 "who constantly seek to ruin the good works of mortals.\n"
 "Emberkin aasimars are descendants of peris."
 msgstr ""
-"페리는 선 선향 외부차원에 속하는 천상의 종족이지만, 믈질계의 필멸자들 사이에서도 종종 찾을 수 있습니다. 타락한 천사의 후손이라고 하는 "
+"페리는 선 선향 외부차원에 속하는 천상의 종족이지만, 물질계의 필멸자들 사이에서도 종종 찾을 수 있습니다. 타락한 천사의 후손이라고 하는 "
 "페리는 조상들의 죄를 참회하여 낙원에 자리를 마련하고자 합니다. 그래서 페리는 악과의 끝없는 싸움에서 필멸자의 선한 영웅들을 보조하고 "
-"지원하는데 줄기차게 헌신합니다. 디브라는 사악한 데블들은 끊임없이 필멸자들의 선한 일을 망치려고 하기 때문에 페리는 이들을 싫어합니다.\n"
+"지원하는데 줄기차게 헌신합니다. 디브라고 알려져있는 사악한 데블들은 끊임없이 필멸자들의 선한 일을 망치려고 하기 때문에 페리는 이들을 싫어합니다.\n"
 "엠버스킨 아시마르는 페리의 후손입니다."
 
 #. Mechanics/Blueprints/Root/Glossary Characters_Entries.Array.data[44].Name
