--- a/ko/Root.po
+++ b/ko/Root.po
@@ -1586,7 +1586,7 @@ msgid ""
 msgstr ""
 "적과 함정으로부터 받게되는 피해량은 <b>20 % 만큼 감소합니다</b>. 적들의 <b>치명타 공격은 감소된 피해를 입힙니다</b>.\n"
 "당신의 캐릭터는 처음에는 <b>치명적인 상해를 입은 뒤에도 죽지는 않을 것</b> 입니다. 대신, 그들은 <b>죽음의 문턱</b> 상태에 "
-"시달릴 것입니다. 이 상태의 캐릭터가 치명적인 상해를 입으면, 그들은 죽을 것입니다. 올레그의 무역소와 같이 편안하고 안전한 장소에서 "
+"시달릴 것입니다. 이 상태의 캐릭터가 치명적인 상해를 입으면, 그들은 죽을 것입니다. 올렉의 무역소와 같이 편안하고 안전한 장소에서 "
 "쉬면 죽음의 문턱 상태는 제거됩니다. 당신의 캐릭터는 즉시 죽음의 효과, 에너지 드레인, 독 또는 다른 유사한 상태로 인하여 여전히 죽을 "
 "수 있습니다.\n"
 "lf 주인공이 사망하면 게임이 끝납니다. 동료가 죽으면 Raise Dead 또는 대부분의 모험가가 지불하기 어려워하는 매우 비싼 서비스를 "
@@ -1646,7 +1646,7 @@ msgid ""
 msgstr ""
 "적과 함정으로부터 받는 피해는 <b>60 % 만큼 감소합니다</b>. 적들은 <b>힘이 약해 지며 치명타를 낼 수 없습니다.</b>\n"
 "당신의 캐릭터는 초기에 <b>치명적인 상해만을 입을 뿐 죽지는 않을 것</b> 입니다. 대신, 그들은 <b>죽음의 문</b> 상태에 "
-"시달릴 것입니다. 이 상태의 캐릭터가 치명적인 부상을 당하면 죽을 것입니다. 올레그의 무역소와 같이 편안하고 안전한 장소에서 쉬면 사망 "
+"시달릴 것입니다. 이 상태의 캐릭터가 치명적인 부상을 당하면 죽을 것입니다. 올렉의 무역소와 같이 편안하고 안전한 장소에서 쉬면 사망 "
 "조건이 없어집니다. 당신의 캐릭터는 즉시 죽음의 효과, 에너지 유출, 독 또는 다른 유사한 상태로 여전히 죽을 수 있습니다.\n"
 "주인공이 사망하면 게임이 끝납니다. 동료가 죽으면 Raise Dead 또는 대부분의 모험가가 지불하기 어려워하는 매우 비싼 서비스를 통해 "
 "부활시킬 수 있습니다."
