명칭 통일, 어색한 표현 수정
- Janush -> 자누시

--- a/ko/Items.po
+++ b/ko/Items.po
@@ -4956,7 +4956,7 @@ msgid ""
 "nanites take form and fuse, but seem practically inert and unresponsive to "
 "our experts and analysis machines. Maybe you can find some use for them.\""
 msgstr ""
-"\"마에스트로 야누쉬께,\n"
+"\"마에스트로 자누시께,\n"
 "마침내 문제가 해결되었습니다. 우리 조직이 입은 모든 피해에 대한 사고 보고서를 올립니다. 지시하신 대로 회사의 기술자들과 로봇 호위들이 "
 "이 소란을 잠재웠습니다.\n"
 "송구스럽게도 이 습격에서 살아남은 우리 인원은 얼마 되지 않습니다. 미르미돈과 하급 로봇들은 겨우 부품만 건졌고, 우리의 귀중한 "
