--- a/ko/World.po
+++ b/ko/World.po
@@ -2592,9 +2592,9 @@ msgid ""
 "lair gave her more than just revenge — in the maestro's papers, Octavia "
 "found a clue promising to unravel the mystery of her origins..."
 msgstr ""
-"불구대천의 원수와 마주하면 어떤 기분일지 상상조차 못하겠어요. 마에스트로 야누쉬는 옥타비아를 엄청나게 괴롭혀 왔죠. 그리고 무고한 생명과 "
+"불구대천의 원수와 마주하면 어떤 기분일지 상상조차 못하겠어요. 마에스트로 자누시는 옥타비아를 엄청나게 괴롭혀 왔죠. 그리고 무고한 생명과 "
 "복수의 숙원 사이에서, 옥타비아는 복수를 선택했답니다. 이 잔인한 선택이 그녀를 바꿔버렸다고 생각하지만... 제가 뭐라고 그녀를 판단할 "
-"수 있겠어요. 어쨌든, 기술 연맹의 비밀 기지에서 옥타비아는 복수 이상의 것을 얻었죠. - 야누쉬의 문서에서 자기 출생의 비밀을 풀 수 "
+"수 있겠어요. 어쨌든, 기술 연맹의 비밀 기지에서 옥타비아는 복수 이상의 것을 얻었죠. - 자누시의 문서에서 자기 출생의 비밀을 풀 수 "
 "있는 단서를 찾아냈거든요..."
 
 #. Mechanics/Blueprints/World/CompanionTexts/Octavia/OctaviaCompanionStory_Q2_EVIL_Title
@@ -2613,9 +2613,9 @@ msgid ""
 "maestro's papers, Octavia found a clue promising to unravel the mystery of "
 "her origins..."
 msgstr ""
-"불구대천의 원수와 마주하면 어떤 기분일지 상상조차 못하겠어요. 마에스트로 야누쉬는 옥타비아를 엄청나게 괴롭혀 왔죠. 그리고 무고한 생명과 "
-"복수의 숙원 사이에서, 그녀는 추격을 포기하고 자신의 원칙을 지켰답니다. 야누쉬를 아깝게 놓치긴 했지만, 기술 연맹의 비밀기지에 온 것이 "
-"허튼 일은 아니었어요. 옥타비아가 야누쉬의 문서에서 자기 출생의 비밀을 풀 수 있는 단서를 찾아냈거든요..."
+"불구대천의 원수와 마주하면 어떤 기분일지 상상조차 못하겠어요. 마에스트로 자누시는 옥타비아를 엄청나게 괴롭혀 왔죠. 그리고 무고한 생명과 "
+"복수의 숙원 사이에서, 그녀는 추격을 포기하고 자신의 원칙을 지켰답니다. 자누시를 아깝게 놓치긴 했지만, 기술 연맹의 비밀기지에 온 것이 "
+"허튼 일은 아니었어요. 옥타비아가 자누시의 문서에서 자기 출생의 비밀을 풀 수 있는 단서를 찾아냈거든요..."
 
 #. Mechanics/Blueprints/World/CompanionTexts/Octavia/OctaviaCompanionStory_Q2_GOOD_Title
 msgctxt "a875e7bd-d301-42e9-ae70-64d445764975"
@@ -2690,7 +2690,7 @@ msgid ""
 msgstr ""
 "내 최악의 적에게도 레곤가르의 적이 되기를 바라지는 않을 거예요. 어쩔때는 레곤가르의 친구들도 그를 두려워 하거든요. 적들은 말할 것도 "
 "없구요! 그러니 무고한 생명과 복수의 숙원 사이에서, 레곤가르가 이미 복수할 준비가 되어 있었다는게 그리 놀라운 일은 아니죠. 어쨌든, "
-"기술 연맹의 비밀 기지에서 레곤가르는 복수 이상의 것을 얻었죠. - 야누쉬의 문서에서 출생의 비밀을 풀 수 있는 단서를 찾아냈거든요..."
+"기술 연맹의 비밀 기지에서 레곤가르는 복수 이상의 것을 얻었죠. - 자누시의 문서에서 출생의 비밀을 풀 수 있는 단서를 찾아냈거든요..."
 
 #. Mechanics/Blueprints/World/CompanionTexts/Regongar/RegongarCompanionStory_Q2_EVIL_Title
 msgctxt "7a2943ac-a845-4ca2-bacb-4f1da95f28af"
@@ -2711,9 +2711,9 @@ msgid ""
 "mystery of his origins..."
 msgstr ""
 "내 최악의 적에게도 레곤가르의 적이 되기를 바라지는 않을 거예요. 어쩔때는 레곤가르의 친구들도 그를 두려워 하거든요. 적들은 말할 것도 "
-"없구요! 그러니 무고한 생명과 복수의 숙원 사이에서, 레곤가르가 자기의 잔혹한 성정을 누르고 야누쉬를 보내준게 얼마나 놀라운 일인지 "
+"없구요! 그러니 무고한 생명과 복수의 숙원 사이에서, 레곤가르가 자기의 잔혹한 성정을 누르고 자누시를 보내준게 얼마나 놀라운 일인지 "
 "아실거예요. 이건 제 생각이지만, 그때 그가 보여준 자비가 약간 덜 사납게 만든거 같아요... 약간이지만요. 어쨌든, 악당은 "
-"탈출해버렸지만 그래도 그를 만난 소득이 있었어요. - 야누쉬의 문서에서 레곤가르는 자기 출생의 비밀을 풀 수 있는 단서를 찾아냈거든요..."
+"탈출해버렸지만 그래도 그를 만난 소득이 있었어요. - 자누시의 문서에서 레곤가르는 자기 출생의 비밀을 풀 수 있는 단서를 찾아냈거든요..."
 
 #. Mechanics/Blueprints/World/CompanionTexts/Regongar/RegongarCompanionStory_Q2_GOOD_Title
 msgctxt "291d8ee4-bfa2-434c-ab53-7e943d3ab664"
