맞춤법 및 어색한 표현 수정

--- a/ko/Quests.po
+++ b/ko/Quests.po
@@ -9597,9 +9597,9 @@ msgid ""
 "born? Who sold them into slavery, and why? Will they find those answers? And "
 "if so... will they be happy they did?"
 msgstr ""
-"기술 연맹과 마에스트로 자누시와의 만남은 옥타비아와 레곤가르가 예상했던 데로 정확히 흘러가지는 않았습니다. 하지만 고생 끝에 낙이 온다는 "
-"말이 있듯이 - 기술 연맹의 은신처에서, 옥타비아와 레곤가르가 꿈만 꿔왔던 보물을 찾아냈습니다 - 바로 그들이 어디서 팔려왔는 지를 "
-"알아내는데 도움이 될 단서였지요! 이 둘은 어디서 태어난 걸까요? 누가 왜 그들을 노예로 팔았던걸까요? 과연 이 질문에 대한 답을 찾을 "
+"기술 연맹과 마에스트로 자누시와의 만남은 옥타비아와 레곤가르가 계획했던 데로 정확히 흘러가지는 않았습니다. 하지만 고생 끝에 낙이 온다는 "
+"말이 있듯이 — 기술 연맹의 은신처에서, 옥타비아와 레곤가르가 꿈꿔왔던 보물을 찾아냈습니다 — 바로 그들이 어디서 팔려 왔는지를 "
+"알아내는데 도움이 될 단서였지요! 이 둘은 어디서 태어난 걸까요? 누가 왜 그들을 노예로 팔았던 걸까요? 과연 그들은 이 질문에 대한 답을 찾을 "
 "수 있을까요? 만약 찾게 된다 할지라도... 찾아낸 사실에 마냥 기뻐할까요?"
 
 #. Mechanics/Blueprints/World/Quests/Companions/Octavia_and_Regongar/Q2_Justice/Oct_Reg_Q2_Justice_Description
