--- a/ko/Kingdom.po
+++ b/ko/Kingdom.po
@@ -25197,8 +25197,8 @@ msgid ""
 "locals, while the Warden will drive the mysterious hero away."
 msgstr ""
 "이 지역에는 가난하고 억압받는 사람들의 곤경을 옹호하는 신비한 영웅이 있습니다. 그의 얼굴은 투구의 보호대 뒤에 숨겨져 있습니다. 그는 "
-"자신을 물수리라고 부르지만, 아무도 그의 본명을 모릅니다. 주민들은 이 새로운 보호자를 갖게 되어 기뻐했지만, 부유한 상인들은 그 영웅이 "
-"대상의 마차를 털었다고 비난했습니다. 섭정은 지역민의 편을 들 것이고, 감시관은 그 신비로운 영웅을 쫓아낼 것입니다."
+"자신을 물수리라고 부르지만, 아무도 그의 본명을 모릅니다. 주민들은 이 새로운 보호자를 갖게 되어 기뻐했지만, 부유한 상인들은 그가 영웅행세를 하며 "
+"캐러밴을 털고 있다고 비난했습니다. 섭정은 지역민의 편을 들 것이고, 감시관은 그 신비로운 영웅을 쫓아낼 것입니다."
 
 #. Mechanics/Blueprints/Kingdom/Events/Decks/KingdomAsCompanion/NG-TalonsofOsprey_LocalizedName
 msgctxt "ea09cc3f-c9a8-4fa9-83e9-512d320dae3a"
