--- a/ko/Encyclopedia.po
+++ b/ko/Encyclopedia.po
@@ -18513,13 +18513,13 @@ msgid ""
 "more hale and muscular."
 msgstr ""
 "<link=\"Encyclopedia:Gnomes\"><b>노움</b></link>이 페이의 먼 땅에서 필멸자의 영역으로 처음으로 여행 "
-"왔을 때, 그들은 물질 세계가 너무나 이상하다고 느꼈고, 기쁨의 감각을 상실하는 공포에 빠졌습니다. 새로운 세상에는 놀라움은 없었고, "
-"오직 위협만을 발견할 수 있었습니다. 그들은 어떤 대가를 치루더라도 생존하기 위해서 음울한 진화를 하였습니다. 이 뒤틀린 목표에 반응하여 "
-"그들의 내면의 마법은 그들의 마음과 몸을 많은 세대를 지나서 변하게 하였고, 그들은 스프리건이라는 크리처가 되었습니다. 사랑, 행복, "
-"아름다움은 이 불쌍한 영혼에게는 아무 의미가 없습니다. 그래서 그들은 폭력과 악의의 삶을 살아갑니다. 긍정적인 감정을 대신하여 그들이 할 "
-"수 있는 최선은 다른 이를 고통 받게 만들 때 느끼는 뒤틀린 만족감입니다.\n"
-"스프리건은 외계적이고 야생적인 외모를 가진 못생긴 노움과 닮았습니다. 많은 스프리건은 마르고 초췌합니다. 마법적으로 커질 때, 더 "
-"건강하고 근육질이 있는 것처럼 보이는 것을 제외한다면 동일한 모습으로 보입니다."
+"왔을 때, 그들은 물질 세계가 너무 낯설고 무서워서 기쁨을 잃어버렸습니다. 새로운 세계의 놀라움은 없었고, "
+"오직 위협만 있었습니다. 그들은 어떤 대가를 치루더라도 살아남겠다고 굳게 결심했습니다. 그들의 타고난 마법은 "
+"이 뒤틀린 목표에 부응하여 여러 세대에 걸쳐 몸과 마음을 변하게 하였고, 스프리건이라 알려진 생명체가 되었습니다. 이 불쌍한 영혼에게 사랑, "
+"행복, 아름다움은 아무 의미가 없기에 그들은 폭력과 악의의 삶을 살아갑니다. 그들이 긍정적인 감정을 대신하여 할 "
+"수 있는 최선은 다른 이를 고통 받게 만들 때 느끼는 은은한 만족감입니다.\n"
+"스프리건은 외계적이고 야생적인 외모를 가진 못생긴 노움과 닮았습니다. 대부분은 마르고 초췌합니다. 마법적으로 커질 때, 훨씬 더 "
+"건강하고 근육질이 있는 것처럼 보이는 것을 제외한다면 똑같아 보입니다."
 
 #. Mechanics/Blueprints/Encyclopedia/Spriggan_Title_String
 msgctxt "15eee1ab-7e08-41de-b554-9d88acbd25e5"
