--- a/ko/Root.po
+++ b/ko/Root.po
@@ -1589,7 +1589,7 @@ msgstr ""
 "시달릴 것입니다. 이 상태의 캐릭터가 치명적인 상해를 입으면, 그들은 죽을 것입니다. 올렉의 무역소와 같이 편안하고 안전한 장소에서 "
 "쉬면 죽음의 문턱 상태는 제거됩니다. 당신의 캐릭터는 즉시 죽음의 효과, 에너지 드레인, 독 또는 다른 유사한 상태로 인하여 여전히 죽을 "
 "수 있습니다.\n"
-"lf 주인공이 사망하면 게임이 끝납니다. 동료가 죽으면 Raise Dead 또는 대부분의 모험가가 지불하기 어려워하는 매우 비싼 서비스를 "
+"주인공이 사망하면 게임이 끝납니다. 동료가 죽으면 소생 또는 대부분의 모험가가 지불하기 어려워하는 매우 비싼 서비스를 "
 "통해 부활시킬 수 있습니다."
 
 #. Mechanics/Blueprints/Root/Difficulties/AdaptedRulesDifficulty_LocalizedName
@@ -1614,7 +1614,7 @@ msgstr ""
 "캐릭터는 적과 함정에서 <b>완전한 피해를</b> 를 입습니다. 적들은 <b>전력으로</b> 싸울 것이며 <b>치명타를 칠 수 있는 "
 "보통의 기회를</b> 가질 것입니다.\n"
 "당신의 캐릭터는 <b>치명적인 부상을 당한 후에 사망</b> 합니다.\n"
-"lf 주인공이 사망하면 게임이 끝납니다. 동료가 죽으면 Raise Dead 또는 대부분의 모험가가 지불하기 어려워하는 매우 비싼 서비스를 "
+"주인공이 사망하면 게임이 끝납니다. 동료가 죽으면 소생 또는 대부분의 모험가가 지불하기 어려워하는 매우 비싼 서비스를 "
 "통해 부활시킬 수 있습니다.\n"
 "<b><color=#ae1600>\n"
 "이 난이도를 선택하는 것은 패스파인더 시스템에 익숙하지 않은 플레이어에게는 권장되지 않습니다.</color></b>"
@@ -1675,7 +1675,7 @@ msgstr ""
 "당신의 캐릭터는 적과 함정으로부터 <b>완전한 피해</b>를 받습니다. 적들은 <b>힘이 증가 하고</b> <b>치명타를 칠 수 있는 "
 "보통의 기회를</b> 가질 것입니다.\n"
 "당신의 캐릭터는 <b>은 치명적인 부상을 당한 후에 사망</b> 합니다.\n"
-"lf 주인공이 사망하면 게임이 끝납니다. 동료가 죽으면 Raise Dead 또는 대부분의 모험가가 지불하기 어려워하는 매우 비싼 서비스를 "
+"주인공이 사망하면 게임이 끝납니다. 동료가 죽으면 소생 또는 대부분의 모험가가 지불하기 어려워하는 매우 비싼 서비스를 "
 "통해 부활시킬 수 있습니다.\n"
 "<b><color=#ae1600>\n"
 "이 난이도를 선택하는 것은 패스파인더 시스템과 패스파인더: 킹 메이커의 전투 시스템에 익숙하지 않은 플레이어에게는 권장하지 않습니다. "
