--- a/ko/Root.po
+++ b/ko/Root.po
@@ -1648,8 +1648,8 @@ msgstr ""
 "당신의 캐릭터는 초기에 <b>치명적인 상해만을 입을 뿐 죽지는 않을 것</b> 입니다. 대신, 그들은 <b>죽음의 문</b> 상태에 "
 "시달릴 것입니다. 이 상태의 캐릭터가 치명적인 부상을 당하면 죽을 것입니다. 올렉의 무역소와 같이 편안하고 안전한 장소에서 쉬면 사망 "
 "조건이 없어집니다. 당신의 캐릭터는 즉시 죽음의 효과, 에너지 유출, 독 또는 다른 유사한 상태로 여전히 죽을 수 있습니다.\n"
-"주인공이 사망하면 게임이 끝납니다. 동료가 죽으면 Raise Dead 또는 대부분의 모험가가 지불하기 어려워하는 매우 비싼 서비스를 통해 "
-"부활시킬 수 있습니다."
+"주인공이 사망하면 게임이 끝납니다. 동료가 죽으면 소생 또는 대부분의 모험가가 지불하기 어려워하는 매우 비싼 서비스를 "
+"통해 부활시킬 수 있습니다."
 
 #. Mechanics/Blueprints/Root/Difficulties/EasyDifficulty_LocalizedName
 msgctxt "8dbf4260-6c81-4410-bd4b-91f87fe1b3ca"
@@ -1699,7 +1699,7 @@ msgstr ""
 "적과 함정으로부터 받는 피해는 <b>80% 만큼 감소합니다</b>. 적들은 <b>힘이 상당히 낮아지며 치명타를 낼 수 없습니다.</b>\n"
 "당신의 캐릭터는 <b>치명적인 부상을 당한 후에도 죽지 않을 것</b> 입니다. 대신, 그들은 전투가 끝날 때까지 <b>의식을 잃을</"
 "b> 것입니다.\n"
-"lf 모든 캐릭터가 의식을 잃으면 게임이 끝납니다."
+"모든 캐릭터가 의식을 잃으면 게임이 끝납니다."
 
 #. Mechanics/Blueprints/Root/Difficulties/StoryDifficulty_LocalizedName
 msgctxt "3f56276e-8f98-4ed5-84ee-b7e89a900cb1"
